--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Sample ecwid store</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
     <script src="index.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>123456</h1>
-</body>
+    <div id="my-store-62401227"></div>
+    <div>
+      <script
+        data-cfasync="false"
+        type="text/javascript"
+        src="https://app.ecwid.com/script.js?62401227&data_platform=code&data_date=2022-08-17"
+        charset="utf-8"
+      ></script>
+      <script type="text/javascript">
+        xProductBrowser(
+          "categoriesPerRow=3",
+          "views=grid(20,3) list(60) table(60)",
+          "categoryView=grid",
+          "searchView=list",
+          "id=my-store-62401227"
+        );
+      </script>
+    </div>
+  </body>
 </html>
